Fix z-index of mobile nav

--- a/styles/Bar.scss
+++ b/styles/Bar.scss
@@ -5,8 +5,9 @@
   align-items: center;
   background-color: white;
   border-bottom: 1px solid lightgrey;
+  position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 8;
 
   .bar__logo {
     width: 30vw;
