--- a/styles/ConsentBanner.scss
+++ b/styles/ConsentBanner.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   text-align: right;
   padding: 1em;
-  z-index: 99999;
+  z-index: 6;
 
   .banner__text {
     padding: 0.5em 0.2em 1em;
