--- a/styles/Nav.scss
+++ b/styles/Nav.scss
@@ -5,7 +5,8 @@
   opacity: 0.9;
   transform: translateY(-110vh);
   transition: transform 0.5s;
-  z-index: 1000;
+  z-index: 7;
+
 
   .nav__list {
     text-align: center;
