--- a/styles/Sticky.scss
+++ b/styles/Sticky.scss
@@ -1,5 +1,5 @@
 .sticky {
     top: 0;
     position: sticky;
-    z-index: 20;
+    z-index: 5;
 }
